After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736205 - GtkMenuButton with popover breaks with GtkApplicationWindow's built-in menubar
GtkMenuButton with popover breaks with GtkApplicationWindow's built-in menubar
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkPopover
3.13.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-09-06 19:15 UTC by Florian Müllner
Modified: 2014-09-07 01:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Test case to show the problem (2.96 KB, text/plain)
2014-09-06 19:15 UTC, Florian Müllner
Details

Description Florian Müllner 2014-09-06 19:15:58 UTC
Created attachment 285586 [details]
Test case to show the problem

Menu buttons using popups work as expected, and so do popovers when using a GtkMenuBar rather than the built-in one - see attached test case.
Comment 1 Matthias Clasen 2014-09-07 01:34:27 UTC
bizarre